--- a/preamble.tex
+++ b/preamble.tex
@@ -85,11 +85,11 @@ vlined]{algorithm2e}
 \numberwithin{equation}{subsection} %Can replace {subsection} with {theorem} if you want
 
 %spacing
-\usepackage{setspace}
+%\usepackage{setspace}
 %\singlespacing
 %\onehalfspacing
 %\doublespacing
-\setstretch{1.1}
+%\setstretch{1.1}
 
 %\setlength{\parskip}{0.4em}
 
